[package]
name = "rig-ollama"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
reqwest = "0.12.23"
rig-core = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
url = "2.5.7"
worker = "0.6.1"

[features]
default = []
worker = ["rig-core/worker"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros"] }
